; Copyright 2023-2024 DreamWorks Animation LLC
; SPDX-License-Identifier: Apache-2.0


[metadata]
name = render_profile_viewer
; Must match this pattern: (([0-9]+\.?){3})(\.(alpha|beta|rc))?(\.[0-9]+)?
version = 1.4.0
description = Tool for viewing render profile results
long_description = file: README.md
url = http://readthedocs/projects/render_profile_viewer
platforms =
    Linux
; Get classifiers from https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.9
; List runtime python dependencies here.
; If you have a dependency on a non-python rez-package, see package.preprocess().
; See this page for version syntax:
;    https://www.python.org/dev/peps/pep-0440/#version-specifiers
; Packages listed here MUST be available at:
;    http://pypi:8080/simple/
; Listing packages here is preferable over listing them in package.py
install_requires =
    PyQt5==5.15.6
    PyQtChart>=5.15.6
    openimageio==2.3.20
;   requests>=2.15
;   PyYAML==3.12
    importlib_metadata
; Used by any code that is run via python setup.py <command>
; See this bug report regarding setuptools_scm & pytest-runner.
; https://github.com/pypa/setuptools_scm/issues/209
setup_requires =
    pytest-runner>=2
    setuptools
; Used only by tests executed via python setup.py test.
tests_require =
    mock
    pytest
    pytest-cov
scripts =
    # scripts/app
; Enable this to install all data files found inside python packages.
; Without this, only python modules will be installed.
; Use options.package_data for finer-grained control of what data files are included.
include_package_data = True

; http://python-packaging.readthedocs.io/en/latest/command-line-scripts.html
; http://setuptools.readthedocs.io/en/latest/setuptools.html#automatic-script-creation
[options.entry_points]
console_scripts =
    render_profile_viewer = render_profile_viewer.mainwindow:main

; The package_data will only find files that are located within python packages.
; http://setuptools.readthedocs.io/en/latest/setuptools.html#including-data-files
; http://setuptools.readthedocs.io/en/latest/pkg_resources.html#resourcemanager-api
[options.package_data]
render_profile_viewer = *.ui

[options.packages.find]
exclude =
    *.test
    *.test.*
    test.*
    test
    tests

[easy_install]
; Use the studio PyPI server by default.
; Make sure this value matches requirements.txt
index-url = http://pypi.dreamworks.net:8080/simple

[tool:pytest]
addopts =
    --verbose
    --strict
    --tb=long
    --cov=render_profile_viewer
    --cov-report term-missing
    --cov-report xml
    --doctest-modules
    --junitxml=./testresults.xml
testpaths = tests
minversion = 3

[coverage:run]
omit =
  render_profile_viewer/__init__.py
  render_profile_viewer/_version.py

[aliases]
; This is so that the standard "python setup.py test" works.
test = pytest
; This maintains compatability with dwa-setuptools.
build_docs = build_sphinx

[build]
; PIPECODE-78: Prevent setuptools from hardcoding a python executable
; in shebangs. Instead, use the one set by rez or the virtualenv.
executable = /usr/bin/env python

